# kugel-rs

./: Cargo.toml  env.sh
examples/: gl_triangle.rs
examples/support/: mod.rs
src/: buffer.rs  context.rs  gli.rs  lib.rs  program.rs  shader.rs  state_program.rs  state_vertex_array.rs  va.rs  vertex_array.rs
src/context/: buffer.rs  buffer_target.rs  buffer_targets.rs  mod.rs  state_program.rs  state_va.rs
src/role/: mod.rs
