[package]

name = "kugel"
version = "0.0.2"
authors = [
    "Nerijus Arlauskas <nercury@gmail.com>"
]

repository = "https://github.com/Nercury/kugel-rs"

keywords = [
    "gl", "opengl", "graphics", "bindings", "wrapper"
]

license = "MIT"

description = "Rust-oriented OpenGL wrapper."

[dependencies]
gl = "*"
log = "*"

[dev-dependencies]
sdl2 = "*"
env_logger = "*"

[profile.dev]
opt-level = 1  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
